--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,8 @@
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-analytics.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-firestore.js";
+    import { getAuth } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
   
@@ -58,6 +60,24 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
+    const db = getFirestore(app);
+    const auth = getAuth(app);
+
+
+    // Setup reCAPTCHA verifier
+  window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('recaptcha-container', {
+    size: 'invisible', // or 'normal'
+    
+    callback: function(response) {
+      console.log('reCAPTCHA resolved');
+    }
+  });
+
+
   </script>
+  <head>
+  <script src="https://www.google.com/recaptcha/enterprise.js?render=6Ld7YHwrAAAAAPDohdKqNOu1uyyJmzbSk8RVSQ6s"></script>
+  <!-- Your code -->
+</head>
 </body>
 </html>
